--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -59,6 +59,22 @@ collector_plugin_proc = {
         #out_of_memory_enable = true;
         #system_wide_numa_stat_enable = true;
     };
+    proc_netstat = {
+        enable = true;
+        monitor_file = "/proc/net/netstat";
+    };
+    proc_net_snmp = {
+        enable = true;
+        monitor_file = "/proc/net/snmp";
+    };
+    proc_net_dev = {
+        enable = true;
+        monitor_file = "/proc/net/dev";
+    };
+    proc_net_stat_conntrack = {
+        enable = true;
+        monitor_file = "/proc/net/stat/conntrack";
+    };
 };
 
 collector_plugin_diskspace = {
