feat: add net collect metrics to readme

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -70,6 +70,8 @@ collector_plugin_proc = {
     proc_net_dev = {
         enable = true;
         monitor_file = "/proc/net/dev";
+        enable_virtual_net_dev = true;
+        exclude_down_net_dev = true;
     };
     proc_net_stat_conntrack = {
         enable = true;
