feat: completed coding collect netdev metric and test

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -70,7 +70,10 @@ collector_plugin_proc = {
     proc_net_dev = {
         enable = true;
         monitor_file = "/proc/net/dev";
-        enable_virtual_net_dev = true;
+        path_get_net_dev_is_virtual = "/sys/devices/virtual/net/%s";
+        path_get_net_dev_mtu = "/sys/class/net/%s/mtu";
+        path_get_net_dev_speed = "/sys/class/net/%s/speed";
+        path_get_net_dev_duplex = "/sys/class/net/%s/duplex";
         exclude_down_net_dev = true;
     };
     proc_net_stat_conntrack = {
