--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -10,8 +10,15 @@ application =
     pid_file = "/tmp/x-monitor.pid";
 
     metrics_http_exporter = {
-        port = 8000;
+        port = 31079;
         iface = "ens160";
+    };
+};
+
+proxy = {
+    envoy = {
+        bin = "/home/calmwu/cpp_space/x-monitor/tools/envoy/envoy";
+        config = "/home/calmwu/cpp_space/x-monitor/env/config/proxy/envoy_cfg.yaml";
     };
 };
 
@@ -83,7 +90,7 @@ collector_plugin_proc = {
     proc_net_sockstat = {
         enable = true;
         monitor_file = "/proc/net/sockstat";
-    };    
+    };
 };
 
 collector_plugin_diskspace = {
