--- a/env/config/proxy/x-monitor-envoy-cds.yaml
+++ b/env/config/proxy/x-monitor-envoy-cds.yaml
@@ -29,7 +29,7 @@ resources:
 
 - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
   name: collector_x-monitor_cluster
-  type: STRICT_DNS
+  type: STATIC
   connect_timeout: 1s
   load_assignment:
     cluster_name: collector_x-monitor_cluster
@@ -40,3 +40,9 @@ resources:
               socket_address:
                 address: 127.0.0.1
                 port_value: 31079
+#  typed_extension_protocol_options:
+#    envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
+#      "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
+#      explicit_http_config:
+#        http2_protocol_options:
+#          max_concurrent_streams: 100
