--- a/env/config/x-monitor-log.cfg
+++ b/env/config/x-monitor-log.cfg
@@ -2,7 +2,7 @@
 strict init = true
 buffer min = 1024
 buffer max = 2MB
-rotate lock file = /tmp/x-monitor.zlog.lock
+rotate lock file = /var/log/x-monitor/x-monitor.zlog.lock
 default format = "%d(%y-%m-%d %T):%ms %-5V [%p:%f:%L@%U] %m%n"
 file perms = 600
 
