--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -35,29 +35,29 @@ pluginsd = {
 collector_plugin_proc = {
     enable = true;
     update_every = 1; #时序数据库更新频率，秒级采集
-    disk_stats = {
+    diskstats = {
         enable = true;
         monitor_file = "/proc/diskstats";
     };
-    load_avg = {
+    loadavg = {
         enable = true;
         monitor_file = "/proc/loadavg";
     };
-    proc_stat = {
+    stat = {
         enable = true;
         monitor_file = "/proc/stat";
     };
-    proc_pressure = {
+    pressure = {
         enable = true;
         monitor_cpu_file = "/proc/pressure/cpu";
         monitor_mem_file = "/proc/pressure/memory";
         monitor_io_file = "/proc/pressure/io";
     };
-    proc_meminfo = {
+    meminfo = {
         enable = true;
         monitor_file = "/proc/meminfo";
     };
-    proc_vmstat = {
+    vmstat = {
         enable = true;
         monitor_file = "/proc/vmstat";
         #swap_io_enable = true;
@@ -66,15 +66,15 @@ collector_plugin_proc = {
         #out_of_memory_enable = true;
         #system_wide_numa_stat_enable = true;
     };
-    proc_netstat = {
+    netstat = {
         enable = true;
         monitor_file = "/proc/net/netstat";
     };
-    proc_net_snmp = {
+    net_snmp = {
         enable = true;
         monitor_file = "/proc/net/snmp";
     };
-    proc_net_dev = {
+    net_dev = {
         enable = true;
         monitor_file = "/proc/net/dev";
         path_get_net_dev_is_virtual = "/sys/devices/virtual/net/%s";
@@ -83,13 +83,17 @@ collector_plugin_proc = {
         path_get_net_dev_duplex = "/sys/class/net/%s/duplex";
         exclude_down_net_dev = true;
     };
-    proc_net_stat_conntrack = {
+    net_stat_conntrack = {
         enable = true;
-        monitor_file = "/proc/net/stat/conntrack";
+        monitor_file = "/proc/net/stat/nf_conntrack";
     };
-    proc_net_sockstat = {
+    net_sockstat = {
         enable = true;
         monitor_file = "/proc/net/sockstat";
+    };
+    cgroups = {
+        enable = true;
+        monitor_file = "/proc/cgroups";
     };
 };
 
