--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -15,14 +15,14 @@ application =
     };
 };
 
-proxy = {
-    envoy = {
-        bin = "/home/calmwu/cpp_space/x-monitor/tools/envoy/envoy";
-        config = "/home/calmwu/cpp_space/x-monitor/env/config/proxy/envoy_cfg.yaml";
-    };
+plugin_proxy = {
+    enable = true;
+    bin = "/home/calmwu/cpp_space/x-monitor/tools/envoy/envoy";
+    args = "--config-path /home/calmwu/cpp_space/x-monitor/env/config/proxy/x-monitor-envoy-cfg.yaml --log-path /var/log/x-monitor/envoy.log --log-level debug";
 };
 
 pluginsd = {
+    enable = true;
     check_for_new_plugins_every = 5;
     timer = { enable = true;
               update_every = 1;
