feat: application collector regex and test

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -34,7 +34,7 @@ pluginsd = {
 
 collector_plugin_proc = {
     enable = true;
-    update_every = 1; #时序数据库更新频率，秒级采集
+    update_every = 1; #采集间隔
     diskstats = {
         enable = true;
         monitor_file = "/proc/diskstats";
@@ -103,8 +103,23 @@ collector_plugin_proc = {
 
 collector_plugin_diskspace = {
     enable = true;
-    update_every = 1; #时序数据库更新频率，秒级采集
+    update_every = 1; #采集间隔
     check_for_new_mountinfos_every = 15;
     exclude_mountpoints = "/proc/* /sys/* /var/run/user/* /run/user/* /snap/* /var/lib/docker/*";
     exclude_filesystems = "*gvfs *gluster* *s3fs *ipfs *davfs2 *httpfs *sshfs *gdfs *moosefs fusectl autofs rpc_pipefs hugetlbfs iso9660 devtmpfs debugfs tracefs";
+}
+
+collector_applications = {
+    enable = true;
+    update_every = 1; #采集间隔
+    check_for_application_processes_every = 5; #检查应用对应进程的间隔
+
+    # 必须以app_开头
+    app_postgres_db = {
+        enable = true;
+        type = "postgres";
+        app_instance_filter_content_type = "file";
+        app_instance_filter_source = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
+        app_instance_keys_filter_regex_pattern = "^(\d+):(\S+):/.+"; # postgres_db实例关键字的过滤规则，通过找到对应pid和子进程
+    };
 }
