--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -109,7 +109,7 @@ collector_plugin_diskspace = {
     exclude_filesystems = "*gvfs *gluster* *s3fs *ipfs *davfs2 *httpfs *sshfs *gdfs *moosefs fusectl autofs rpc_pipefs hugetlbfs iso9660 devtmpfs debugfs tracefs";
 }
 
-collector_applications = {
+collector_app = {
     enable = true;
     update_every = 1; #采集间隔
     check_for_application_processes_every = 5; #检查应用对应进程的间隔
@@ -118,8 +118,9 @@ collector_applications = {
     app_postgres_db = {
         enable = true;
         type = "postgres";
-        app_instance_filter_content_type = "file";
-        app_instance_filter_source = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
-        app_instance_keys_filter_regex_pattern = "^(\d+):(\S+):/.+"; # postgres_db实例关键字的过滤规则，通过找到对应pid和子进程
+        app_assign_pids = "pid_and_ppid"; #应用关联pid的方式
+        pid_keys_filter_content_type = "file";
+        pid_keys_filter_sources = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
+        pid_keys_filter_regex_pattern = "^(\d+):(\S+):/.+"; # postgres_db实例关键字的过滤规则，通过找到对应pid和子进程
     };
 }
