code: app filter rule config

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -111,16 +111,31 @@ collector_plugin_diskspace = {
 
 collector_app = {
     enable = true;
-    update_every = 1; #采集间隔
-    check_for_application_processes_every = 5; #检查应用对应进程的间隔
+    update_every = 1; #应用指标采集间隔
+    check_for_application_processes_every = 10; #应用更新的时间间隔
 
+    # 通过下面应用的过滤条件，程序生成具体的过滤规则。
     # 必须以app_开头
-    app_postgres_db = {
+    app_postgres = {
         enable = true;
         type = "postgres";
-        app_assign_pids = "pid_and_ppid"; #应用关联pid的方式
-        pid_keys_filter_content_type = "file";
-        pid_keys_filter_sources = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
-        pid_keys_filter_regex_pattern = "^(\d+):(\S+):/.+"; # postgres_db实例关键字的过滤规则，通过找到对应pid和子进程
+        filter_content_type = "file";
+        filter_sources = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
+        #----appname的过滤正则表达式
+        appname_filter_regex_pattern = ".+:(\S+):/.+";
+        #----keys的过滤正则表达式
+        keys_filter_regex_pattern = "^(\d+):.+";
+        other_specific_keys = "postgres -D";
+        app_assign_pids_type = "key_in_cmdline_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
+    };
+
+    app_mysql = {
+        enable = true;
+        type = "mysql";
+        filter_content_type = "mountinfo"; # /proc/mounts
+        appname_filter_regex_pattern = "^\/.+LV_(\S+)_data.+";
+        keys_filter_regex_pattern = "^.+\/paic\/(my\d+).*";
+        other_specific_keys = "";
+        app_assign_pids_type = "key_in_cmdline"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
 }
