feat:generate rules

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -119,7 +119,6 @@ collector_plugin_apps = {
     app_postgres = {
         enable = true;
         type = "postgres";
-        filter_content_type = "file";
         filter_sources = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
         #----appname的过滤正则表达式
         appname_filter_regex_pattern = ".+:(\S+):/.+";
@@ -132,7 +131,7 @@ collector_plugin_apps = {
     app_mysql = {
         enable = true;
         type = "mysql";
-        filter_content_type = "mountinfo"; # /proc/mounts
+        filter_sources = "/proc/mounts"
         appname_filter_regex_pattern = "^\/.+LV_(\S+)_data.+";
         keys_filter_regex_pattern = "^.+\/paic\/(my\d+).*";
         other_specific_keys = "";
