test:complete create filter rules

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -112,29 +112,30 @@ collector_plugin_diskspace = {
 collector_plugin_apps = {
     enable = true;
     update_every = 1; #应用指标采集间隔
-    check_for_application_processes_every = 10; #应用更新的时间间隔
+    update_every_for_app = 10; #应用更新的时间间隔
+    update_every_for_filter_rules = 30; #过滤规则更新的时间间隔
+    
 
     # 通过下面应用的过滤条件，程序生成具体的过滤规则。
     # 必须以app_开头
     app_postgres = {
         enable = true;
         type = "postgres";
-        filter_sources = "/pacloud/postgres/etc/db_info.txt /paic/postgres/etc/db_info.txt";
-        #----appname的过滤正则表达式
-        appname_filter_regex_pattern = ".+:(\S+):/.+";
-        #----keys的过滤正则表达式
-        keys_filter_regex_pattern = "^(\d+):.+";
-        other_specific_keys = "postgres -D";
-        app_assign_pids_type = "key_in_cmdline_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
+        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt,/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_2.txt";
+        #----appname、keys的过滤正则表达式
+        filter_regex_pattern = "^(\d+):(\S+):\/.+";
+        appname_match_index = 2;
+        additional_keys_str = "postgres -D";
+        app_assign_pids_type = "match-keys-for-pid_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
     };
 
     app_mysql = {
         enable = true;
         type = "mysql";
         filter_sources = "/proc/mounts"
-        appname_filter_regex_pattern = "^\/.+LV_(\S+)_data.+";
-        keys_filter_regex_pattern = "^.+\/paic\/(my\d+).*";
-        other_specific_keys = "";
-        app_assign_pids_type = "key_in_cmdline"; #应用关联pid的方式，通过cmdline找到主进程pid
+        filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
+        app_name_index = 1;
+        additional_keys_str = "";
+        app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
 }
