feat: split additional keys

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -125,7 +125,7 @@ collector_plugin_apps = {
         #----appname、keys的过滤正则表达式
         filter_regex_pattern = "^(\d+):(\S+):\/.+";
         appname_match_index = 2;
-        additional_keys_str = "postgres -D";
+        additional_keys_str = "postgres -D,additional_key1,additional_key2";
         app_assign_pids_type = "match-keys-for-pid_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
     };
 
