feat: coding collector appstat routine

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -109,7 +109,7 @@ collector_plugin_diskspace = {
     exclude_filesystems = "*gvfs *gluster* *s3fs *ipfs *davfs2 *httpfs *sshfs *gdfs *moosefs fusectl autofs rpc_pipefs hugetlbfs iso9660 devtmpfs debugfs tracefs";
 }
 
-collector_plugin_apps = {
+collector_plugin_appstat = {
     enable = true;
     update_every = 1; #应用指标采集间隔
     update_every_for_app = 10; #应用更新的时间间隔
