debug app usage collect

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -138,4 +138,14 @@ collector_plugin_appstatus = {
         additional_keys_str = "";
         app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
+
+    app_test = {
+        enable = true;
+        type = "timer-app-test";
+        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt"
+        filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
+        app_name_index = 1;
+        additional_keys_str = "";
+        app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
+    };
 }
