fix: repair bugs

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -122,8 +122,7 @@ collector_plugin_appstatus = {
         enable = true;
         type = "postgres";
         filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt,/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_2.txt";
-        #----appname、keys的过滤正则表达式
-        filter_regex_pattern = "^(\d+):(\S+):\/.+";
+        filter_regex_pattern = "^(\d+):(\S+):\/.+";         #----appname、keys的过滤正则表达式
         appname_match_index = 2;
         additional_keys_str = "postgres -D,additional_key1,additional_key2";
         app_assign_pids_type = "match-keys-for-pid_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
@@ -134,18 +133,18 @@ collector_plugin_appstatus = {
         type = "mysql";
         filter_sources = "/proc/mounts"
         filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
-        app_name_index = 1;
+        appname_match_index = 1;
         additional_keys_str = "";
         app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
 
     app_test = {
         enable = true;
-        type = "timer-app-test";
-        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt"
-        filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
-        app_name_index = 1;
-        additional_keys_str = "";
+        type = "timer.plugin";
+        filter_sources = "/bin/bash /home/calmwu/program/cpp_space/x-monitor/env/plugins.d/timer.plugin 1 -c"
+        filter_regex_pattern = "^\/.+plugins.d\/(\S+) .+";
+        appname_match_index = 1;
+        additional_keys_str = "timer.plugin";
         app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
 }
