fix: repair app already exists logic

--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -121,10 +121,12 @@ collector_plugin_appstatus = {
     app_postgres = {
         enable = true;
         type = "postgres";
-        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt,/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_2.txt";
-        filter_regex_pattern = "^(\d+):(\S+):\/.+";         #----appname、keys的过滤正则表达式
-        appname_match_index = 2;
-        additional_keys_str = "postgres -D,additional_key1,additional_key2";
+        #filter_sources = "/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_1.txt,/home/calmwu/program/cpp_space/x-monitor/cli/config_test/db_info_2.txt";
+        #filter_regex_pattern = "^(\d+):(\S+):\/.+"; 
+        filter_sources = "/usr/bin/postmaster -D /var/lib/pgsql/data";
+        filter_regex_pattern = ".+\/lib\/(\S+)\/.+";         #----appname、keys的过滤正则表达式
+        appname_match_index = 1;
+        additional_keys_str = "postmaster -D";
         app_assign_pids_type = "match-keys-for-pid_and_ppid"; #应用关联pid的方式，通过cmdline找到主进程pid，通过ppid找到子进程
     };
 
@@ -139,7 +141,7 @@ collector_plugin_appstatus = {
     };
 
     app_test = {
-        enable = true;
+        enable = false;
         type = "timer.plugin";
         filter_sources = "/bin/bash /home/calmwu/program/cpp_space/x-monitor/env/plugins.d/timer.plugin 1 -c"
         filter_regex_pattern = "^\/.+plugins.d\/(\S+) .+";
