--- a/env/config/x-monitor.cfg
+++ b/env/config/x-monitor.cfg
@@ -6,7 +6,7 @@ application =
     plugins_directory = "/home/calmwu/program/cpp_space/x-monitor/env/plugins.d";
     log_directory = "/var/log/x-monitor";
     log_config_file = "/home/calmwu/program/cpp_space/x-monitor/env/config/x-monitor-log.cfg";
-    run_as_user = "calmwu";
+    run_as_user = "root";
     pid_file = "/tmp/x-monitor.pid";
 
     metrics_http_exporter = {
@@ -34,7 +34,7 @@ pluginsd = {
 
 collector_plugin_proc = {
     enable = true;
-    update_every = 1; #采集间隔
+    update_every = 1; #时序数据库更新频率，秒级采集
     diskstats = {
         enable = true;
         monitor_file = "/proc/diskstats";
@@ -133,12 +133,23 @@ collector_plugin_appstatus = {
     app_mysql = {
         enable = true;
         type = "mysql";
-        filter_sources = "/proc/mounts"
-        filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
+        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/env/config/db_filter_resources.txt"
+        #filter_regex_pattern = "^\/.+LV_(\S+)_data.+\/paic\/(my\d+).*";
+        filter_regex_pattern = ".+\/libexec\/(\S+) .+";
         appname_match_index = 1;
-        additional_keys_str = "";
+        additional_keys_str = "basedir";
         app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
     };
+
+    app_redis = {
+        enable = true;
+        type = "redis";
+        filter_sources = "/home/calmwu/program/cpp_space/x-monitor/env/config/db_filter_resources.txt"
+        filter_regex_pattern = "^\/usr\/bin\/(\S+) .+";
+        appname_match_index = 1;
+        additional_keys_str = "6379";
+        app_assign_pids_type = "match-keys-for-pid"; #应用关联pid的方式，通过cmdline找到主进程pid
+    };    
 
     app_test = {
         enable = false;
