fix: Update Makefile to use cw_hungtask_test as the target module
The Makefile in the hungtask_test directory has been updated to use cw_hungtask_test as the target module instead of hungtask_test. This change ensures that the correct kernel module is generated.

The following changes were made:
- Updated the obj-m variable to include cw_hungtask_test.o as the target module
- Added cw_hungtask_test-y variable to specify the source file hungtask_test.o

--- a/examples/kernel_dev/hungtask_test/Makefile
+++ b/examples/kernel_dev/hungtask_test/Makefile
@@ -1,11 +1,12 @@
 ifneq ($(KERNELRELEASE),)
 
 EXTRA_CFLAGS += -I$(src)
-obj-m += hungtask_test.o
+obj-m += cw_hungtask_test.o # 最终生成的内核模块目标文件的名称
+cw_hungtask_test-y = hungtask_test.o
 
 else # ifneq($(KERNELRELEASE),)
 
-DRIVER := hungtask_test
+DRIVER := cw_hungtask_test
 
 ifneq ($(MAKECMDGOALS),help)
 include ../common.mk
