feat: Add ps.sh script for process listing
This commit adds a new script, ps.sh, to the tools/bin directory. The script allows users to list processes and their details. If no argument is provided, it lists all processes with their status, command, PID, parent PID, start time, and elapsed time. If an argument is provided, it filters the process list based on the argument.

Co-authored-by: [Author Name] <[Author Email]>

--- a/env/config/xm_ebpf_plugin/config.yaml
+++ b/env/config/xm_ebpf_plugin/config.yaml
@@ -31,7 +31,7 @@ eBPF:
         metrcs:
           - runq_latency
           - offcpu_duration
-          - hang_process
+          - hung_task
         ebpf_prog:
           filter_scope_type: 1 # 1: os, 2: namespace, 4: PID, 5: PGID
           filter_scope_value: 0
