feat: 更新 semaphore_test 和相关文档，添加对延迟释放和所有者显示的支持，优化代码结构

--- a/examples/kernel_dev/semaphore_test/Makefile
+++ b/examples/kernel_dev/semaphore_test/Makefile
@@ -4,7 +4,7 @@ EXTRA_CFLAGS += -I$(src)
 obj-m += semaphore_test.o
 
 else # ifneq($(KERNELRELEASE),)
-
+EXTRA_CFLAGS += -I$(src) -g -DDEBUG -Werror -Wno-sign-compare
 DRIVER := semaphore_test
 
 ifneq ($(MAKECMDGOALS),help)
